--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
   var stage;
 
   var projectId = [Your ID Here];
-  var projectTitle = '';
-  var turbo = false;
+  var projectTitle = 234772719;
+  var turbo = true;
   var fullScreen = true;
 
   var params = location.search.substr(1).split('&');
